--- a/working/css/style.css
+++ b/working/css/style.css
@@ -25,7 +25,7 @@ section, footer, header, aside{
 --------------------------*/
 
 
-#clock{ width: auto; padding: 40px; margin: 0 auto 30px; position: relative; }
+#clock{ width: auto; padding: 0px; margin: 0 auto 0px; position: relative; }
 
 #clock:after{
 	content:'';
@@ -45,7 +45,7 @@ section, footer, header, aside{
 	padding: 40px 20px 20px;
 	border-radius:6px;
 	position:relative;
-	height: 384px;
+	height: 210px;
 }
 
 
@@ -126,11 +126,11 @@ section, footer, header, aside{
 	text-align:left;
 	position:relative;
 	/* 液晶字体宽度 */
-	width: 228px;
+	width: 28px;
 	height:50px;
 	display:inline-block;
 	/* 液晶字体间隔 */
-	margin:0 24px;
+	margin:0 32px;
 }
 
 #clock .digits div span{
@@ -158,34 +158,34 @@ section, footer, header, aside{
  d6|	|d7
 	d3-
 */
-#clock .digits .d1{			height:25px;width:150px;top:12px;left:38px;}
-#clock .digits .d1:before{	border-width:0 30px 25px 0;border-right-color:inherit;left:-30px;}
-#clock .digits .d1:after{	border-width:0 0 25px 30px;border-left-color:inherit;right:-30px;}
 
-#clock .digits .d2{			height:25px;width:150px;top:181px;left:38px;}
-#clock .digits .d2:before{	border-width:13px 25px 12px;border-right-color:inherit;left:-50px;}
-#clock .digits .d2:after{	border-width:13px 25px 12px;border-left-color:inherit;right:-50px;}
+#clock .digits .d1{			height:10px;width:64px;top:8px;left:6px;}
+#clock .digits .d1:before{	border-width:0 10px 10px 0;border-right-color:inherit;left:-10px;}
+#clock .digits .d1:after{	border-width:0 0 10px 10px;border-left-color:inherit;right:-10px;}
 
-#clock .digits .d3{			height:25px;width:150px;top:348px;left:38px;}
-#clock .digits .d3:before{	border-width:25px 30px 0 0;border-right-color:inherit;left:-30px;}
-#clock .digits .d3:after{	border-width:25px 0 0 30px;border-left-color:inherit;right:-30px;}
+#clock .digits .d2{			height:10px;width:64px;top:99px;left:6px;}
+#clock .digits .d2:before{	border-width:0px 0px -1px;border-right-color:inherit;left:-10px;}
+#clock .digits .d2:after{	border-width:-1px 0px 0px;border-left-color:inherit;right:-10px;}
 
-#clock .digits .d4{			width:25px;height:120px;top:50px;left:0;}
-#clock .digits .d4:before{	border-width:0 25px 30px 0;border-bottom-color:inherit;top:-30px;}
-#clock .digits .d4:after{	border-width:0 0 25px 25px;border-left-color:inherit;bottom:-25px;}
+#clock .digits .d3{			height:10px;width:64px;top:189px;left:6px;}
+#clock .digits .d3:before{	border-width:10px 10px 0 0;border-right-color:inherit;left:-10px;}
+#clock .digits .d3:after{	border-width:10px 0 0 10px;border-left-color:inherit;right:-10px;}
 
-#clock .digits .d5{			width:25px;height:120px;top:50px;right:0;}
-#clock .digits .d5:before{	border-width:0 0 30px 25px;border-bottom-color:inherit;top:-30px;}
-#clock .digits .d5:after{	border-width:25px 0 0 25px;border-top-color:inherit;bottom:-25px;}
+#clock .digits .d4{			width:10px;height:74px;top:19px;left:-5px;}
+#clock .digits .d4:before{	border-width:0 10px 10px 0;border-bottom-color:inherit;top:-10px;}
+#clock .digits .d4:after{	border-width:0 0 10px 10px;border-left-color:inherit;bottom:-10px;}
 
-#clock .digits .d6{			width:25px;height:120px;top:221px;left:0;}
-#clock .digits .d6:before{	border-width:0 25px 30px 0;border-bottom-color:inherit;top:-30px;}
-#clock .digits .d6:after{	border-width:0 0 25px 25px;border-left-color:inherit;bottom:-25px;}
+#clock .digits .d5{			width:10px;height:74px;top:19px;right:-53px;}
+#clock .digits .d5:before{	border-width:0 0 10px 10px;border-bottom-color:inherit;top:-10px;}
+#clock .digits .d5:after{	border-width:10px 0 0 10px;border-top-color:inherit;bottom:-10px;}
 
-#clock .digits .d7{			width:25px;height:120px;top:221px;right:0;}
-#clock .digits .d7:before{	border-width:0 0 30px 25px;border-bottom-color:inherit;top:-30px;}
-#clock .digits .d7:after{	border-width:25px 0 0 25px;border-top-color:inherit;bottom:-25px;}
+#clock .digits .d6{			width:10px;height:74px;top:114px;left:-5px;}
+#clock .digits .d6:before{	border-width:0 10px 10px 0;border-bottom-color:inherit;top:-10px;}
+#clock .digits .d6:after{	border-width:0 0 10px 10px;border-left-color:inherit;bottom:-10px;}
 
+#clock .digits .d7{			width:10px;height:74px;top:114px;right:-53px;}
+#clock .digits .d7:before{	border-width:0 0 10px 10px;border-bottom-color:inherit;top:-10px;}
+#clock .digits .d7:after{	border-width:10px 0 0 10px;border-top-color:inherit;bottom:-10px;}
 
 /* 1 */
 
@@ -290,22 +290,23 @@ section, footer, header, aside{
 
 /* The dots */
 
+
 #clock .digits div.dots{
-	width:15px;
+	width:5px;
 }
 
 #clock .digits div.dots:before,
 #clock .digits div.dots:after{
-	width:25px;
-	height:25px;
+	width:10px;
+	height:10px;
 	content:'';
 	position:absolute;
 	left:0;
-	top:100px;
+	top:47px;
 }
 
 #clock .digits div.dots:after{
-	top:265px;
+	top:140px;
 }
 
 
@@ -317,7 +318,7 @@ section, footer, header, aside{
 #clock .alarm{
 	width:16px;
 	height:16px;
-	bottom:20px;
+	bottom:30px;
 	background:url('../img/alarm_light.jpg');
 	position:absolute;
 	opacity:0.2;
@@ -360,8 +361,8 @@ section, footer, header, aside{
 
 #clock .ampm{
 	position:absolute;
-	bottom:20px;
-	right:20px;
+	bottom:207px;
+	/* right:697px; */
 	font-size:12px;
 }
 
